compiler/analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    COMILLA_DOBLE
    DEFINIR_BLOQUE
    DESDE
    EXCEPCIONES
    LLAVE_DER
    LLAVE_IZQ
    MAS_MAS
    NULO
    PUNTO
    RETORNAR
    ROMPER_BUCLE
    TIPO_ENTERO

Grammar

Rule 0     S' -> statement
Rule 1     statement -> ID OP_ASIGNAR expression
Rule 2     statement -> ID OP_ASIGNAR ENTERO
Rule 3     statement -> expression
Rule 4     statement -> print_statement
Rule 5     statement -> COMENTARIO_UNA_LINEA
Rule 6     statement -> empty_line
Rule 7     statement -> import_statement
Rule 8     statement -> declaracion_clase
Rule 9     expression -> expression OP_SUMAR expression
Rule 10    expression -> expression OP_RESTAR expression
Rule 11    expression -> expression OP_MULTIPLICAR expression
Rule 12    expression -> expression OP_DIVIDIR expression
Rule 13    expression -> expression MODULO expression
Rule 14    expression -> expression POTENCIA expression
Rule 15    expression -> PARENTESIS_IZQ expression PARENTESIS_DER
Rule 16    expression -> ENTERO
Rule 17    expression -> FLOTANTE
Rule 18    expression -> CADENA
Rule 19    expression -> CARACTER
Rule 20    expression -> ID
Rule 21    expression -> OP_RESTAR expression
Rule 22    statement -> ID OP_ASIGNAR expression OP_SUMAR expression
Rule 23    print_statement -> PRINT PARENTESIS_IZQ print_args PARENTESIS_DER
Rule 24    print_args -> print_arg
Rule 25    print_args -> print_args COMA print_arg
Rule 26    print_args -> list_access
Rule 27    print_arg -> expression
Rule 28    print_arg -> ID
Rule 29    print_arg -> VERDADERO
Rule 30    print_arg -> FALSO
Rule 31    print_arg -> CADENA
Rule 32    print_arg -> ENTERO
Rule 33    print_arg -> FLOTANTE
Rule 34    list_access -> ID CORCHETE_IZQ expression CORCHETE_DER
Rule 35    expression -> expression IGUAL expression
Rule 36    expression -> expression MAYORQUE expression
Rule 37    expression -> expression MAYORIGUAL expression
Rule 38    expression -> expression MENORQUE expression
Rule 39    expression -> expression MENORIGUAL expression
Rule 40    expression -> expression DIFERENTE expression
Rule 41    expression -> expression OP_LOGICO_Y expression
Rule 42    expression -> expression OP_LOGICO_O expression
Rule 43    expression -> expression OP_LOGICO_NOT expression
Rule 44    expression -> PARENTESIS_IZQ expression OP_LOGICO_Y expression PARENTESIS_DER
Rule 45    expression -> PARENTESIS_IZQ expression OP_LOGICO_O expression PARENTESIS_DER
Rule 46    expression -> PARENTESIS_IZQ expression OP_LOGICO_NOT expression PARENTESIS_DER
Rule 47    statement -> SI expression DOS_PUNTOS
Rule 48    statement -> SI expression
Rule 49    statement -> SINOSI expression DOS_PUNTOS
Rule 50    statement -> SINOSI expression
Rule 51    statement -> SINO DOS_PUNTOS
Rule 52    statement -> SINO
Rule 53    statement -> ID OP_ASIGNAR lista
Rule 54    lista -> CORCHETE_IZQ elementos CORCHETE_DER
Rule 55    elementos -> expression
Rule 56    elementos -> expression COMA elementos
Rule 57    statement -> PARA ID EN ID DOS_PUNTOS
Rule 58    statement -> PARA ID EN RANGO PARENTESIS_IZQ expression PARENTESIS_DER DOS_PUNTOS
Rule 59    statement -> MIENTRAS expression DOS_PUNTOS
Rule 60    statement -> ID OP_INCREMENTO ENTERO
Rule 61    statement -> DEFINE_FUNCIONES ID PARENTESIS_IZQ parametros PARENTESIS_DER DOS_PUNTOS
Rule 62    parametros -> ID
Rule 63    parametros -> ID COMA parametros
Rule 64    statement -> ID PARENTESIS_IZQ expression PARENTESIS_DER
Rule 65    import_statement -> IMPORTAR MODULO_MATEMATICO
Rule 66    declaracion_clase -> CLASE ID DOS_PUNTOS
Rule 67    empty_line -> <empty>

Terminals, with rules where they appear

ALIAS                : 
CADENA               : 18 31
CARACTER             : 19
CLASE                : 66
COMA                 : 25 56 63
COMENTARIO_UNA_LINEA : 5
COMILLA_DOBLE        : 
CORCHETE_DER         : 34 54
CORCHETE_IZQ         : 34 54
DEFINE_FUNCIONES     : 61
DEFINIR_BLOQUE       : 
DESDE                : 
DIFERENTE            : 40
DOS_PUNTOS           : 47 49 51 57 58 59 61 66
EN                   : 57 58
ENTERO               : 2 16 32 60
EXCEPCIONES          : 
FALSO                : 30
FLOTANTE             : 17 33
ID                   : 1 2 20 22 28 34 53 57 57 58 60 61 62 63 64 66
IGUAL                : 35
IMPORTAR             : 65
LLAVE_DER            : 
LLAVE_IZQ            : 
MAS_MAS              : 
MAYORIGUAL           : 37
MAYORQUE             : 36
MENORIGUAL           : 39
MENORQUE             : 38
MIENTRAS             : 59
MODULO               : 13
MODULO_MATEMATICO    : 65
NULO                 : 
OP_ASIGNAR           : 1 2 22 53
OP_DIVIDIR           : 12
OP_INCREMENTO        : 60
OP_LOGICO_NOT        : 43 46
OP_LOGICO_O          : 42 45
OP_LOGICO_Y          : 41 44
OP_MULTIPLICAR       : 11
OP_RESTAR            : 10 21
OP_SUMAR             : 9 22
PARA                 : 57 58
PARENTESIS_DER       : 15 23 44 45 46 58 61 64
PARENTESIS_IZQ       : 15 23 44 45 46 58 61 64
POTENCIA             : 14
PRINT                : 23
PUNTO                : 
RANGO                : 58
RETORNAR             : 
ROMPER_BUCLE         : 
SI                   : 47 48
SINO                 : 51 52
SINOSI               : 49 50
TIPO_ENTERO          : 
VERDADERO            : 29
error                : 

Nonterminals, with rules where they appear

declaracion_clase    : 8
elementos            : 54 56
empty_line           : 6
expression           : 1 3 9 9 10 10 11 11 12 12 13 13 14 14 15 21 22 22 27 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48 49 50 55 56 58 59 64
import_statement     : 7
list_access          : 26
lista                : 53
parametros           : 61 63
print_arg            : 24 25
print_args           : 23 25
print_statement      : 4
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . ID OP_ASIGNAR expression
    (2) statement -> . ID OP_ASIGNAR ENTERO
    (3) statement -> . expression
    (4) statement -> . print_statement
    (5) statement -> . COMENTARIO_UNA_LINEA
    (6) statement -> . empty_line
    (7) statement -> . import_statement
    (8) statement -> . declaracion_clase
    (22) statement -> . ID OP_ASIGNAR expression OP_SUMAR expression
    (47) statement -> . SI expression DOS_PUNTOS
    (48) statement -> . SI expression
    (49) statement -> . SINOSI expression DOS_PUNTOS
    (50) statement -> . SINOSI expression
    (51) statement -> . SINO DOS_PUNTOS
    (52) statement -> . SINO
    (53) statement -> . ID OP_ASIGNAR lista
    (57) statement -> . PARA ID EN ID DOS_PUNTOS
    (58) statement -> . PARA ID EN RANGO PARENTESIS_IZQ expression PARENTESIS_DER DOS_PUNTOS
    (59) statement -> . MIENTRAS expression DOS_PUNTOS
    (60) statement -> . ID OP_INCREMENTO ENTERO
    (61) statement -> . DEFINE_FUNCIONES ID PARENTESIS_IZQ parametros PARENTESIS_DER DOS_PUNTOS
    (64) statement -> . ID PARENTESIS_IZQ expression PARENTESIS_DER
    (9) expression -> . expression OP_SUMAR expression
    (10) expression -> . expression OP_RESTAR expression
    (11) expression -> . expression OP_MULTIPLICAR expression
    (12) expression -> . expression OP_DIVIDIR expression
    (13) expression -> . expression MODULO expression
    (14) expression -> . expression POTENCIA expression
    (15) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (16) expression -> . ENTERO
    (17) expression -> . FLOTANTE
    (18) expression -> . CADENA
    (19) expression -> . CARACTER
    (20) expression -> . ID
    (21) expression -> . OP_RESTAR expression
    (35) expression -> . expression IGUAL expression
    (36) expression -> . expression MAYORQUE expression
    (37) expression -> . expression MAYORIGUAL expression
    (38) expression -> . expression MENORQUE expression
    (39) expression -> . expression MENORIGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . expression OP_LOGICO_Y expression
    (42) expression -> . expression OP_LOGICO_O expression
    (43) expression -> . expression OP_LOGICO_NOT expression
    (44) expression -> . PARENTESIS_IZQ expression OP_LOGICO_Y expression PARENTESIS_DER
    (45) expression -> . PARENTESIS_IZQ expression OP_LOGICO_O expression PARENTESIS_DER
    (46) expression -> . PARENTESIS_IZQ expression OP_LOGICO_NOT expression PARENTESIS_DER
    (23) print_statement -> . PRINT PARENTESIS_IZQ print_args PARENTESIS_DER
    (67) empty_line -> .
    (65) import_statement -> . IMPORTAR MODULO_MATEMATICO
    (66) declaracion_clase -> . CLASE ID DOS_PUNTOS

    ID              shift and go to state 2
    COMENTARIO_UNA_LINEA shift and go to state 6
    SI              shift and go to state 10
    SINOSI          shift and go to state 11
    SINO            shift and go to state 12
    PARA            shift and go to state 13
    MIENTRAS        shift and go to state 15
    DEFINE_FUNCIONES shift and go to state 16
    PARENTESIS_IZQ  shift and go to state 14
    ENTERO          shift and go to state 4
    FLOTANTE        shift and go to state 18
    CADENA          shift and go to state 19
    CARACTER        shift and go to state 20
    OP_RESTAR       shift and go to state 17
    PRINT           shift and go to state 21
    $end            reduce using rule 67 (empty_line -> .)
    IMPORTAR        shift and go to state 22
    CLASE           shift and go to state 23

    statement                      shift and go to state 1
    expression                     shift and go to state 3
    print_statement                shift and go to state 5
    empty_line                     shift and go to state 7
    import_statement               shift and go to state 8
    declaracion_clase              shift and go to state 9

state 1

    (0) S' -> statement .



state 2

    (1) statement -> ID . OP_ASIGNAR expression
    (2) statement -> ID . OP_ASIGNAR ENTERO
    (22) statement -> ID . OP_ASIGNAR expression OP_SUMAR expression
    (53) statement -> ID . OP_ASIGNAR lista
    (60) statement -> ID . OP_INCREMENTO ENTERO
    (64) statement -> ID . PARENTESIS_IZQ expression PARENTESIS_DER
    (20) expression -> ID .

    OP_ASIGNAR      shift and go to state 24
    OP_INCREMENTO   shift and go to state 25
    PARENTESIS_IZQ  shift and go to state 26
    OP_SUMAR        reduce using rule 20 (expression -> ID .)
    OP_RESTAR       reduce using rule 20 (expression -> ID .)
    OP_MULTIPLICAR  reduce using rule 20 (expression -> ID .)
    OP_DIVIDIR      reduce using rule 20 (expression -> ID .)
    MODULO          reduce using rule 20 (expression -> ID .)
    POTENCIA        reduce using rule 20 (expression -> ID .)
    IGUAL           reduce using rule 20 (expression -> ID .)
    MAYORQUE        reduce using rule 20 (expression -> ID .)
    MAYORIGUAL      reduce using rule 20 (expression -> ID .)
    MENORQUE        reduce using rule 20 (expression -> ID .)
    MENORIGUAL      reduce using rule 20 (expression -> ID .)
    DIFERENTE       reduce using rule 20 (expression -> ID .)
    OP_LOGICO_Y     reduce using rule 20 (expression -> ID .)
    OP_LOGICO_O     reduce using rule 20 (expression -> ID .)
    OP_LOGICO_NOT   reduce using rule 20 (expression -> ID .)
    $end            reduce using rule 20 (expression -> ID .)


state 3

    (3) statement -> expression .
    (9) expression -> expression . OP_SUMAR expression
    (10) expression -> expression . OP_RESTAR expression
    (11) expression -> expression . OP_MULTIPLICAR expression
    (12) expression -> expression . OP_DIVIDIR expression
    (13) expression -> expression . MODULO expression
    (14) expression -> expression . POTENCIA expression
    (35) expression -> expression . IGUAL expression
    (36) expression -> expression . MAYORQUE expression
    (37) expression -> expression . MAYORIGUAL expression
    (38) expression -> expression . MENORQUE expression
    (39) expression -> expression . MENORIGUAL expression
    (40) expression -> expression . DIFERENTE expression
    (41) expression -> expression . OP_LOGICO_Y expression
    (42) expression -> expression . OP_LOGICO_O expression
    (43) expression -> expression . OP_LOGICO_NOT expression

    $end            reduce using rule 3 (statement -> expression .)
    OP_SUMAR        shift and go to state 27
    OP_RESTAR       shift and go to state 28
    OP_MULTIPLICAR  shift and go to state 29
    OP_DIVIDIR      shift and go to state 30
    MODULO          shift and go to state 31
    POTENCIA        shift and go to state 32
    IGUAL           shift and go to state 33
    MAYORQUE        shift and go to state 34
    MAYORIGUAL      shift and go to state 35
    MENORQUE        shift and go to state 36
    MENORIGUAL      shift and go to state 37
    DIFERENTE       shift and go to state 38
    OP_LOGICO_Y     shift and go to state 39
    OP_LOGICO_O     shift and go to state 40
    OP_LOGICO_NOT   shift and go to state 41


state 4

    (16) expression -> ENTERO .

    OP_SUMAR        reduce using rule 16 (expression -> ENTERO .)
    OP_RESTAR       reduce using rule 16 (expression -> ENTERO .)
    OP_MULTIPLICAR  reduce using rule 16 (expression -> ENTERO .)
    OP_DIVIDIR      reduce using rule 16 (expression -> ENTERO .)
    MODULO          reduce using rule 16 (expression -> ENTERO .)
    POTENCIA        reduce using rule 16 (expression -> ENTERO .)
    IGUAL           reduce using rule 16 (expression -> ENTERO .)
    MAYORQUE        reduce using rule 16 (expression -> ENTERO .)
    MAYORIGUAL      reduce using rule 16 (expression -> ENTERO .)
    MENORQUE        reduce using rule 16 (expression -> ENTERO .)
    MENORIGUAL      reduce using rule 16 (expression -> ENTERO .)
    DIFERENTE       reduce using rule 16 (expression -> ENTERO .)
    OP_LOGICO_Y     reduce using rule 16 (expression -> ENTERO .)
    OP_LOGICO_O     reduce using rule 16 (expression -> ENTERO .)
    OP_LOGICO_NOT   reduce using rule 16 (expression -> ENTERO .)
    $end            reduce using rule 16 (expression -> ENTERO .)
    DOS_PUNTOS      reduce using rule 16 (expression -> ENTERO .)
    PARENTESIS_DER  reduce using rule 16 (expression -> ENTERO .)
    COMA            reduce using rule 16 (expression -> ENTERO .)
    CORCHETE_DER    reduce using rule 16 (expression -> ENTERO .)


state 5

    (4) statement -> print_statement .

    $end            reduce using rule 4 (statement -> print_statement .)


state 6

    (5) statement -> COMENTARIO_UNA_LINEA .

    $end            reduce using rule 5 (statement -> COMENTARIO_UNA_LINEA .)


state 7

    (6) statement -> empty_line .

    $end            reduce using rule 6 (statement -> empty_line .)


state 8

    (7) statement -> import_statement .

    $end            reduce using rule 7 (statement -> import_statement .)


state 9

    (8) statement -> declaracion_clase .

    $end            reduce using rule 8 (statement -> declaracion_clase .)


state 10

    (47) statement -> SI . expression DOS_PUNTOS
    (48) statement -> SI . expression
    (9) expression -> . expression OP_SUMAR expression
    (10) expression -> . expression OP_RESTAR expression
    (11) expression -> . expression OP_MULTIPLICAR expression
    (12) expression -> . expression OP_DIVIDIR expression
    (13) expression -> . expression MODULO expression
    (14) expression -> . expression POTENCIA expression
    (15) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (16) expression -> . ENTERO
    (17) expression -> . FLOTANTE
    (18) expression -> . CADENA
    (19) expression -> . CARACTER
    (20) expression -> . ID
    (21) expression -> . OP_RESTAR expression
    (35) expression -> . expression IGUAL expression
    (36) expression -> . expression MAYORQUE expression
    (37) expression -> . expression MAYORIGUAL expression
    (38) expression -> . expression MENORQUE expression
    (39) expression -> . expression MENORIGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . expression OP_LOGICO_Y expression
    (42) expression -> . expression OP_LOGICO_O expression
    (43) expression -> . expression OP_LOGICO_NOT expression
    (44) expression -> . PARENTESIS_IZQ expression OP_LOGICO_Y expression PARENTESIS_DER
    (45) expression -> . PARENTESIS_IZQ expression OP_LOGICO_O expression PARENTESIS_DER
    (46) expression -> . PARENTESIS_IZQ expression OP_LOGICO_NOT expression PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 14
    ENTERO          shift and go to state 4
    FLOTANTE        shift and go to state 18
    CADENA          shift and go to state 19
    CARACTER        shift and go to state 20
    ID              shift and go to state 43
    OP_RESTAR       shift and go to state 17

    expression                     shift and go to state 42

state 11

    (49) statement -> SINOSI . expression DOS_PUNTOS
    (50) statement -> SINOSI . expression
    (9) expression -> . expression OP_SUMAR expression
    (10) expression -> . expression OP_RESTAR expression
    (11) expression -> . expression OP_MULTIPLICAR expression
    (12) expression -> . expression OP_DIVIDIR expression
    (13) expression -> . expression MODULO expression
    (14) expression -> . expression POTENCIA expression
    (15) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (16) expression -> . ENTERO
    (17) expression -> . FLOTANTE
    (18) expression -> . CADENA
    (19) expression -> . CARACTER
    (20) expression -> . ID
    (21) expression -> . OP_RESTAR expression
    (35) expression -> . expression IGUAL expression
    (36) expression -> . expression MAYORQUE expression
    (37) expression -> . expression MAYORIGUAL expression
    (38) expression -> . expression MENORQUE expression
    (39) expression -> . expression MENORIGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . expression OP_LOGICO_Y expression
    (42) expression -> . expression OP_LOGICO_O expression
    (43) expression -> . expression OP_LOGICO_NOT expression
    (44) expression -> . PARENTESIS_IZQ expression OP_LOGICO_Y expression PARENTESIS_DER
    (45) expression -> . PARENTESIS_IZQ expression OP_LOGICO_O expression PARENTESIS_DER
    (46) expression -> . PARENTESIS_IZQ expression OP_LOGICO_NOT expression PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 14
    ENTERO          shift and go to state 4
    FLOTANTE        shift and go to state 18
    CADENA          shift and go to state 19
    CARACTER        shift and go to state 20
    ID              shift and go to state 43
    OP_RESTAR       shift and go to state 17

    expression                     shift and go to state 44

state 12

    (51) statement -> SINO . DOS_PUNTOS
    (52) statement -> SINO .

    DOS_PUNTOS      shift and go to state 45
    $end            reduce using rule 52 (statement -> SINO .)


state 13

    (57) statement -> PARA . ID EN ID DOS_PUNTOS
    (58) statement -> PARA . ID EN RANGO PARENTESIS_IZQ expression PARENTESIS_DER DOS_PUNTOS

    ID              shift and go to state 46


state 14

    (15) expression -> PARENTESIS_IZQ . expression PARENTESIS_DER
    (44) expression -> PARENTESIS_IZQ . expression OP_LOGICO_Y expression PARENTESIS_DER
    (45) expression -> PARENTESIS_IZQ . expression OP_LOGICO_O expression PARENTESIS_DER
    (46) expression -> PARENTESIS_IZQ . expression OP_LOGICO_NOT expression PARENTESIS_DER
    (9) expression -> . expression OP_SUMAR expression
    (10) expression -> . expression OP_RESTAR expression
    (11) expression -> . expression OP_MULTIPLICAR expression
    (12) expression -> . expression OP_DIVIDIR expression
    (13) expression -> . expression MODULO expression
    (14) expression -> . expression POTENCIA expression
    (15) expression -> . PARENTESIS_IZQ expression PARENTESIS_DER
    (16) expression -> . ENTERO
    (17) expression -> . FLOTANTE
    (18) expression -> . CADENA
    (19) expression -> . CARACTER
    (20) expression -> . ID
    (21) expression -> . OP_RESTAR expression
    (35) expression -> . expression IGUAL expression
    (36) expression -> . expression MAYORQUE expression
    (37) expression -> . expression MAYORIGUAL expression
    (38) expression -> . expression MENORQUE expression
    (39) expression -> . expression MENORIGUAL expression
    (40) expression -> . expression DIFERENTE expression
    (41) expression -> . expression OP_LOGICO_Y expression
    (42) expression -> . expression OP_LOGICO_O expression
    (43) expression -> . expression OP_LOGICO_NOT expression
    (44) expression -> . PARENTESIS_IZQ expression OP_LOGICO_Y expression PARENTESIS_DER
    (45) expression -> . PARENTESIS_IZQ expression OP_LOGICO_O expression PARENTESIS_DER
    (46) expression -> . PARENTESIS_IZQ expression OP_LOGICO_NOT expression PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 14
    ENTERO          shift and go to state 4
    FLOTANTE        shift and go to state 18
    CADENA          shift and go to state 19
    CARACTER        shift and go to state 20
    ID              shift and go to state 43
    OP_RESTAR       shift and go to state 17

    expression                     shift and go to state 47

state 15
